Add production CORS origins